# rendafixa-calc-wasm

./: Cargo.toml  index.html  package.json  style.css  tailwind.config.js
src/: lib.rs  routes.rs  rules.rs  sidebar.rs
src/pages/: homepage.rs  mod.rs  other.rs
