[package]
name = "rendafixa-wasm"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }
reqwest = { version = "0.11.12", features = ["json"] }
rust_decimal = { version = "1.26.1", features = ["maths"] }
rust_decimal_macros = "1.26.1"
wasm-bindgen = "0.2.83"
